# state_prediction

./: .gitignore  CLAUDE.md  README.md  main.py  proposal_next_state_retrieval.md  pyproject.toml
configs/: nsr_qwen3vl_reusable_emb.json
evaluation/: evaluate_retrieval.py
inference/: __init__.py  retrieve.py
nsr/: __init__.py  config.py  constants.py  dino.py  latent_store.py  losses.py  projection.py  prompts.py  qwen_guard.py  retrieval.py  schema.py  swift_utils.py
training/: precompute_latents.py
training/grpo/: README.md  plugin.py  run_grpo.sh
training/sft/: README.md  plugin.py  prepare_dataset.py  run_sft.sh  write_special_tokens.py
